# noyau

./: .gitignore  CMakeLists.txt  README.md
kernel/: CMakeLists.txt  kernel.ld
kernel/include/: common_typedefs.hpp  memory.hpp  memutil.hpp  mmiodef.hpp
kernel/include/cop0/: cop0.hpp
kernel/include/debug/: debug.hpp
kernel/include/dma/: tags.hpp
kernel/include/fs/: vdev.hpp  vfs.hpp
kernel/include/gs/: gs.hpp  regs.hpp
kernel/include/hw_interrupt/: common.hpp
kernel/include/intc/: intc.hpp
kernel/include/mmio/: dma.hpp  gs.hpp  intc.hpp  sif.hpp  timers.hpp
kernel/include/sif/: sif.hpp
kernel/include/sio/: sio.hpp
kernel/include/syscall/: syscall.hpp
kernel/include/timer/: timer.hpp
kernel/include/util/: util.hpp
kernel/src/: bootstrap.s  frame.s  kmain.cpp  memory.cpp
kernel/src/cop0/: cop0.cpp
kernel/src/data/: vterm_font_itex.c
kernel/src/debug/: debug.cpp
kernel/src/fs/: vdev.cpp  vfs.cpp
kernel/src/gs/: gs.cpp
kernel/src/hw_interrupt/: common.cpp  handlers.s  v_common.cpp  v_interrupt.cpp
kernel/src/intc/: intc.cpp
kernel/src/sif/: sif.cpp
kernel/src/sio/: sio.cpp
kernel/src/syscall/: syscall.cpp
kernel/src/timer/: timer.cpp
kernel/src/util/: printf.c
loader/: CMakeLists.txt
loader/src/: loader.c
tools/: 8bitto4bit.py
